# StellarGate

./: .env.example  AMOUNT_CANONICALIZATION.md  AMOUNT_CANONICALIZATION_CHANGES.md  CANONICALIZATION_INDEX.md  CANONICALIZATION_QUICK_REFERENCE.md  Cargo.toml  DELIVERABLES.md  Dockerfile  EXACT_CODE_CHANGES.md  FINAL_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  README.md  SOLUTION_SUMMARY.md  TODO.md  VERIFICATION_CHECKLIST.md  WEBHOOK_API_EXAMPLES.md  WEBHOOK_DELIVERY_API.md  WEBHOOK_REFERENCE.md  deny.toml  docker-compose.yml  openapi.yaml
.kiro/: CI_FIXES_SUMMARY.md  WEBHOOK_DOCS_CONSOLIDATION.md
src/: config.rs  db.rs  expiry.rs  horizon.rs  lib.rs  main.rs  metrics.rs  ssrf.rs  webhook.rs
src/api/: mod.rs  payments.rs
tests/: api_tests.rs  concurrency_tests.rs  rate_limit_tests.rs  trustline_tests.rs  webhook_dispatch_tests.rs
