[package]
name = "stellargate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellargate"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
